# example_event_source_ecommerce

./: .gitignore  LICENSE  Makefile  README.md  README.rst  pyproject.toml  pytest.ini
django_application/: manage.py
django_application/customers/: apps.py  forms.py  handlers.py  models.py  tests.py  urls.py  views.py
django_application/customers/migrations/: 0001_initial.py  0002_alter_customer_id.py  0003_rename_id_customer_uid.py
django_application/customers/templates/: customers_base.html
django_application/django_application/: asgi.py  settings.py  urls.py  wsgi.py
django_application/events/: admin.py  models.py
django_application/events/migrations/: 0001_initial.py  0002_event_stream.py
django_application/orders/: apps.py  handlers.py  models.py  tests.py  urls.py  views.py
django_application/products/: __init__.py  apps.py  forms.py  handlers.py  models.py  tests.py  urls.py  views.py
django_application/templates/: base.html
ecommerce/crm/: customer.py  pyproject.toml
ecommerce/ordering/: pyproject.toml
ecommerce/pricing/: pyproject.toml
ecommerce/product-catalog/: pyproject.toml
ecommerce/taxes/: pyproject.toml
es_ecommerce/product-catalog/: pyproject.toml
infra/: __init__.py  command_bus.py  cqrs.py  event_store.py  pyproject.toml  repository.py  types.py
infra/event_store/: __init__.py  aggregate_root.py  event_store.py
infra/infra/: command_bus.py  cqrs.py  repository.py  types.py
infra/tests/: command_bus_test.py  cqrs_test.py  test_event_store.py  types_test.py
tests/: test_es_ecommerce.py
(+71 files in other folders)
