[tool.poetry]
name = "es-ecommerce"
version = "0.1.0"
description = ""
authors = ["climbus <climbus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
pytest-django = "^4.5.2"
django-bootstrap-v5 = "^1.0.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
