[tool.poetry]
name = "es-ecommerce"
version = "0.1.0"
description = ""
authors = ["climbus <climbus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.2"
pytest-django = "^4.5.2"
django-bootstrap-v5 = "^1.0.11"
infra = { path = "infra", develop = false }
crm = { path = "ecommerce/crm", develop = false }
ordering = { path = "ecommerce/ordering", develop = false }
pricing = { path = "ecommerce/pricing", develop = false }
product-catalog = { path = "ecommerce/product-catalog", develop = false }
taxes = { path = "ecommerce/taxes", develop = false }

[tool.poetry.dev-dependencies]
pytest = "^7.4"
black = "^22.1.0"
isort = "^5.10.1"
beautifulsoup4 = "^4.10.0"
pytest-watch = "^4.2.0"
pytest-cov = "^3.0.0"
django-stubs = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
